# lettre

./: LICENSE  README.md  index.html  latest.json  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml  sync-to-gitee.yml
src/: App.vue  main.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/modules/: cipher.rs  mark.rs  mod.rs  save.rs
src/components/: MdEditor.vue
src/router/: index.js
src/styles/: element-variables.scss
src/views/: index.vue
src/views/calc/: index.vue
src/views/cipher/: index.vue
src/views/mark/: index.vue
src/views/save/: index.vue
